<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lssoftworks.u0068830.popularmovies.DetailsActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_movietitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/blueGrey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="@string/details_title"
            style="@style/TextAppearance.AppCompat.Title.Inverse"/>

        <ImageView
            android:id="@+id/iv_detailsposter"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description"
            app:layout_constraintTop_toBottomOf="@id/tv_movietitle"
            app:layout_constraintLeft_toLeftOf="@id/tv_movietitle"/>

        <TextView
            android:id="@+id/tv_releasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/iv_detailsposter"
            app:layout_constraintLeft_toRightOf="@id/iv_detailsposter"
            tools:text="@string/details_releasedate" />

        <TextView
            android:id="@+id/tv_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_releasedate"
            app:layout_constraintLeft_toLeftOf="@id/tv_releasedate"
            tools:text="@string/details_runtime" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_runtime"
            app:layout_constraintLeft_toLeftOf="@id/tv_releasedate"
            tools:text="@string/details_rating" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_detailsposter"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="@string/details_synopsis" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>